prevent half-pixel blurring

--- a/src/scss/elements/_transform-center.scss
+++ b/src/scss/elements/_transform-center.scss
@@ -9,6 +9,7 @@
 
 .parent {
     position: relative;
+    transform-style: preserve-3d; // prevent "half pixel" blurring
     // some width;
     // some height;
 }
